@@ -8,9 +8,9 @@ using Microsoft.Xna.Framework.Input;
 using Microsoft.Xna.Framework.Content;
 namespace SDA
 {
-    class Player
+    class Player : Sprite   
     {
-        int health;
+        int maxHealth;
         int dexterity;
         int strength;
         int defense;
@@ -18,24 +18,24 @@ namespace SDA
         int expToLevel;
         int level;
         int vitality;
-
-        Texture2D texture;
-
-        public Texture2D Texture { get { return texture; } }
+        KeyboardState oldKBState;
+        public bool playerTurn;
         
 
-        public Player(ContentManager content)
+        public Player()
         {
+
             
-            health = 100;
             dexterity = 1;
             strength = 1;
             exp = 0;
+            vitality = 1;
+            maxHealth = 90 + (10 * vitality);
             expToLevel = 100;
             level = 1;
-            content.RootDirectory = "Content";
-            texture = content.Load<Texture2D>("PlayerTexture");
-           
+            oldKBState = Keyboard.GetState();
+            playerTurn = true;
+                
         }
         /// <summary>
         /// Method to move the character, uses input to move character one tile
@@ -43,6 +43,29 @@ namespace SDA
         /// </summary>
         public void Move()
         {
+            KeyboardState currentKBState = Keyboard.GetState();
+
+            if (oldKBState.IsKeyUp(Keys.W) && currentKBState.IsKeyDown(Keys.W))
+            {
+                position.Y -= 60;
+                playerTurn = false;
+            }
+            else if (oldKBState.IsKeyUp(Keys.A) && currentKBState.IsKeyDown(Keys.A))
+            {
+                position.X -= 100;
+                playerTurn = false;
+            }
+            else if (oldKBState.IsKeyUp(Keys.D) && currentKBState.IsKeyDown(Keys.D))
+            {
+                position.X += 100;
+                playerTurn = false;
+            }
+            else if (oldKBState.IsKeyUp(Keys.S) && currentKBState.IsKeyDown(Keys.S))
+            {
+                position.Y += 60;
+                playerTurn = false;
+            }
+            oldKBState = currentKBState;
             
         }
         /// <summary>
