@@ -1,0 +1,19 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace SDA
+{
+    class Skeleton : Enemy
+    {
+        protected override void Attack()
+        {
+
+        }
+        protected override void Move()
+        {
+            
+        }
+    }
+}
